# lm-exercise

./: Dockerfile  alembic.ini  pyproject.toml  readme.md  requirements.txt  solution.md
.github/workflows/: pythonapp.yaml
alembic/: env.py
alembic/versions/: 5d5f82cd40ce_update_orders_table_with_order_placed_.py  64b05491debd_update_orders_table_remove_user_id.py  6bb8fcff0d5e_update_orders_table.py  ff41c271d9c1_create_orders_table.py
app/: logger_util.py  main.py  order_types.py  routes.py  settings.py  stock_exchange.py
app/db/: base.py  session.py
app/models/: orders.py  usecase_exception.py
app/repo/: orders.py
app/routers/: orders.py
app/routers/utils/: retry.py
app/schema/: orders.py
app/usecase/: orders.py
tests/: conftest.py  test_routers_orders.py
