[tool.poetry]
name = "exercise-backend-main"
version = "0.1.0"
description = ""
authors = ["Sijumon Karyil Raju <sijumon.karyil@deliveryhero.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
mapper = "^0.1.17"
pytest-asyncio = "^0.25.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
